Fixed submit button on ios

--- a/advertise/res/css/style.css
+++ b/advertise/res/css/style.css
@@ -54,6 +54,7 @@ body {
   font-size:1.25em;
   border-radius:5em;
   font-weight:bold;
+  -webkit-appearance:none;
 }
 .adTypeButton {
   display:block;
